--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -505,7 +505,7 @@ text-overflow:clip;
 }
 #detail_acts{
 padding-top:2px;
-min-width:30px;
+/*min-width:30px;*/
 }
 #detail_acts .act_move{
 margin-top:1px;
